# NetStepper2

./: .gitignore  CMakeLists.txt  ESP_L6470.brd  ESP_L6470.sch  README.md  cockpit.json  dxfimp.scr  naos.json
pcb/: net-stepper2.brd  net-stepper2.csv  net-stepper2.sch
src/: buttons.c  buttons.h  enc.c  enc.h  encoder.c  encoder.h  end_stop.c  end_stop.h  ext.c  ext.h  l6470.c  l6470.h  l6470_constants.h  led.c  led.h  main.c  sharp.c  sharp.h
